[package]
name = "kvc"
version = "1.1.1"
authors = ["Josh Vander Hook <josh@vanderhook.info>"]
edition = "2018"
description = "Very simple key-value-count tools to go from / to pandas data frames or streaming formats"
license = "MIT"
readme = "README.md"
homepage = "https://github.com/jodavaho/kvc"
keywords = ["pandas","data-frame","streaming"]
categories = ["science","text-processing"]


[dependencies]
regex="1.4.0"
clap ="2.33.0"
